tests/ui/feature-gates/feature-gate-extern_types.rs
extern "C" {
    type T; //~ ERROR extern types are experimental
}

fn main() {}
